//protoc --go_out=plugins=grpc:. *.proto

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.lanlian.rpc.feedback";
option java_outer_classname = "FeedBackProto";
option objc_class_prefix = "Grpc";

package feedback;

// The Id service definition.
service FeedBack {
    rpc AddFeedback(AddFeedbackRequest) returns (AddFeedbackReply) {}            //添加反馈
    rpc GetFeedbacks(GetFeedbacksRequest) returns (GetFeedbacksReply) {}         //获得反馈列表
    rpc GetFeedback (GetFeedbackRequest) returns (GetFeedbackReply) {}           //获得反馈信息
}
message Feedback {
    int32    id = 1;
    string   description = 2;
    string   deviceInfo = 3;
    string   appInfo  = 4;
    string   userInfo = 5;
    string   mobileInfo  = 6;
    string   extendInfo  = 7;
    repeated string  files  = 8;
    string   contact = 9;
    int64    createTime = 10;
    int64    updateTime = 11;
}
message AddFeedbackRequest {
    string   source = 1;
    string   description = 2;
    string   deviceInfo = 3;
    string   appInfo  = 4;
    string   userInfo = 5;
    string   mobileInfo  = 6;
    string   extendInfo  = 7;
    repeated string  files  = 8;
    string   contact = 9;
    int64    createTime = 10;
    int64    updateTime = 11;
}
message AddFeedbackReply {
    int32   errorCode = 1;
    int32	id = 2;
}

message GetFeedbacksRequest {
    int32    page  = 1;
    int32    count = 2;
}

message GetFeedbacksReply {
    repeated Feedback feedBack =1;
    int32 errorCode = 2;
    int32 totalCount = 3;
}
message GetFeedbackRequest {
    int32    id  = 1;
}

message GetFeedbackReply {
    Feedback feedBack = 1;
    int32 errorCode = 2;
}